[package]
name = "alerta-cli"
version = "0.1.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CLI tool for showing simple GUI dialogs on X11"
keywords = ["messagebox", "error", "msgbox", "dialog", "box"]
categories = ["gui"]

[[bin]]
name = "alerta"
path = "src/main.rs"
doc = false

[[test]]
name = "sizebench"
harness = false

[dependencies]
alerta = { path = "../alerta", version = "0.1.1" }
larpa = "0.1.0"
