[package]
name = "alerta"
version = "0.1.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Display simple GUI dialogs on X11 / XWayland"
keywords = ["messagebox", "error", "msgbox", "dialog", "box"]
categories = ["gui"]

[dependencies]
x11rb = { version = "0.13.2", default-features = false }
bytemuck = { version = "1.24.0", features = ["extern_crate_alloc"] }
raqote = { version = "0.8.5", default-features = false }
ab_glyph = { version = "0.2.32", features = ["libm"] }
euclid = { version = "0.22.11", features = ["libm"] }
rapid-qoi = "0.6.1"
# Note: we enable `libm` everywhere mostly for reproducibility. There are some graphical snapshot
# tests whose result shouldn't depend on the routines in libc.

[dev-dependencies]
raqote = { version = "0.8.5", default-features = false, features = ["png"]}
